<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2020 Bandyer S.r.l. All Rights Reserved.
  ~  See LICENSE.txt for licensing information
  -->
<resources>

    <string name="search" translatable="false">Search&#8230;</string>
    <string name="button_allow" translatable="false">Allow</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_deny" translatable="false">Deny</string>
    <string name="dialog_error_title" translatable="false">Error</string>

    <string name="app_name_with_version" translatable="false">Showcase %1$s</string>

    <!-- CALL OPTIONS -->

    <string name="call_type_audio_only" translatable="false">AUDIO_ONLY</string>
    <string name="call_type_audio_upgradable" translatable="false">AUDIO_UPGRADABLE</string>
    <string name="call_type_audio_video" translatable="false">AUDIO_VIDEO</string>
    <string name="call_type_audio_only_name" translatable="false">Audio only</string>small
    <string name="call_type_audio_upgradable_name" translatable="false">Audio upgradable</string>
    <string name="call_type_audio_video_name" translatable="false">Audio video</string>
    <string name="default_call_options" translatable="false">Default call settings</string>
    <string name="select_call_type" translatable="false">Select call type:</string>
    <string name="audio_only" translatable="false">Audio only</string>
    <string name="audio_upgradable" translatable="false">Audio upgradable</string>
    <string name="audio_video" translatable="false">Audio video</string>
    <string name="call" translatable="false">Call</string>
    <string name="select_call_capabilities_from_chat_ui" translatable="false">Select call types that can be started from chat UI:</string>
    <string name="chat" translatable="false">Chat</string>

    <string name="select_in_call_capabilities" translatable="false">Select in-call capabilities:</string>
    <string name="select_in_call_options_audio" translatable="false">Select in-call options:</string>
    <string name="cancel_action" translatable="false">Cancel</string>
    <string name="select_all_call_capabilities" translatable="false">Select all call capabilities</string>
    <string name="deselect_all_call_capabilities" translatable="false">Deselect all call capabilities</string>
    <string name="select_all_call_options" translatable="false">Select all call options</string>
    <string name="deselect_all_call_options" translatable="false">Deselect all call options</string>
    <string name="no_users_selected" translatable="false">No users selected.</string>
    <string name="settings_have_been_changed_alert" translatable="false">Settings have been changed, restarting app&#8230;</string>
    <string name="ongoing_call_description" translatable="false">Tap to go back in call</string>

    <string name="pref_call_type_title" translatable="false">Default call type</string>
    <string name="pref_call_capabilities_title" translatable="false">In-call default capabilities</string>
    <string name="pref_call_options_title" translatable="false">In-call default options</string>

    <string name="pref_call_options_experimental" translatable="false">Experimental</string>

    <string name="pick_users" translatable="false">Hello %1$s!\nWho do you want to call or chat with?</string>
    <string name="login_title" translatable="false">Choose the user to login with:</string>

</resources>