<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Bandyer S.r.l. All Rights Reserved.
  ~ See LICENSE.txt for licensing information
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/actions"
        android:fadingEdgeLength="@dimen/space8"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space16">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space16"
                android:textSize="@dimen/text_h1"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space16"
                android:text="@string/select_call_capabilities_from_chat_ui"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_all_call_capabilities"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space8"
                    android:layout_marginRight="@dimen/space8"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/select_all_call_capabilities"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deselect_all_call_capabilities"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space8"
                    android:layout_marginLeft="@dimen/space8"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/deselect_all_call_capabilities"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_all_call_options"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space8"
                    android:layout_marginRight="@dimen/space8"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/select_all_call_options"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deselect_all_call_options"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space8"
                    android:layout_marginLeft="@dimen/space8"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/deselect_all_call_options"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_action"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space16"
            android:layout_marginBottom="@dimen/space16"
            android:layout_weight="1"
            android:text="@string/cancel_action"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space16"
            android:layout_weight="1"
            android:text="@string/chat"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>
